# lingdist

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
lingdist/: Makefile  README.md  lingdist.c  lingdist.pyx  lingdist_test.py  linglib  linglib.c  linglib.h  main.c  setup.py
src/lingdist/: CMakeLists.txt  Makefile  README.md  lingdist.c  lingdist.pyx  lingdist_test.py  setup.py
src/lingdist/lib/: linglib.c  linglib.h  test.c
tests/code/: lingdist_test.py
tests/notebooks/: PHOR-tests.ipynb
