# Project setup: pip install -e .

[build-system]
requires = ["setuptools>=42", "wheel", "Cython>=3.0", "build", "scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "lingdist"
version = "0.1.0"
description = "Linguistic distance functions. Compare two strings of text with language analysis algorithms"
authors = [{name = "Steven Dindl", email = "stevendindl@outlook.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Only installed when explicitly asked for
# e.g.: pip install -e .[dev]
[project.optional-dependencies]
dev = ["pandas", "ipykernel"]

[tool.scikit-build]
cmake.version = "3.15"
cmake.source-dir = "src/lingdist"
wheel.packages = ["src/lingdist"]

